fix back to top z-index

--- a/src/styles/components/_toTop.scss
+++ b/src/styles/components/_toTop.scss
@@ -3,7 +3,7 @@
 
 .back-to-top {
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   bottom: 2rem;
   right: 2rem;
   padding: 0.5rem;
